# stereo-vo

./: CMakeLists.txt  README.md
include/: AbstractFeatureDescriptor.hpp  AbstractFeatureDetector.hpp  AbstractFeatureMatcher.hpp  AbstractMotionEstimator.hpp  BidirectionalReprojectionErrorOptUtils.hpp  CameraCalibrationParameters.hpp  CornerDetector.hpp  DepthSource.hpp  FeatureMatchingUtils.hpp  FilteringUtils.hpp  Frame.hpp  HowardMotionEstimator.hpp  RectificationMaps.hpp  SIFTDescriptor.hpp  SIFTDetector.hpp  StereoCalibrationParameters.hpp  StereoRig.hpp
results/: README
src/: BidirectionalReprojectionErrorOptUtils.cpp  CameraCalibrationParameters.cpp  CornerDetector.cpp  FeatureMatchingUtils.cpp  FilteringUtils.cpp  Frame.cpp  HowardMotionEstimator.cpp  RectificationMaps.cpp  SIFTDescriptor.cpp  SIFTDetector.cpp  StereoCalibrationParameters.cpp  StereoRig.cpp
test/: TestCalibrationData.cpp  TestDisparity.cpp  TestFeatures.cpp  TestFiltering.cpp  TestLoadFrame.cpp  TestPipeline.cpp  TestRectification.cpp  TestStereoCalibrationData.cpp
test/data/: README.txt  ground_truth_translation_data_backyard  ground_truth_translation_data_library
